<resources>
    <string name="app_name">E-culture-tool-A</string>
    <string name="title_activity_auth_email_pass" translatable="false">AuthEmailPassActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="psw_too_short" translatable="false">Password field has less than , %1$d characters</string>
    <string name="msg_psw_without_space" translatable="false">Your password cannot contain spaces </string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="msg_different_psw" translatable="false">Your passwords do not match</string>
    <string name="field_empty" translatable="false">%1$s field is empty </string>
    <string name="field_too_long" translatable="false">%1$s field contains more than, %2$d characters</string>
    <string name="valid_email" translatable="false">Enter a valid email</string>
    <string name="logged_in" translatable="false">Logged in</string>
    <string name="uid_preferences" translatable="false">uid_preferences</string>
    <string name="success_registration" translatable="false">Success registration</string>
    <string name="credentials_not_accepted" translatable="false">Email and password are not allowed</string>
    <string name="email_already_use" translatable="false">Email already in use by another account</string>
    <string name="failed_registration" translatable="false">Failed registration</string>
    <string name="login" translatable="false">Login</string>
    <string name="sign_in_with" translatable="false">Sign in with:</string>
    <string name="You_are_not_registered" translatable="false">You are not registered?</string>
    <string name="Register" translatable="false">Register</string>
    <string name="no_connection" translatable="false">There is no internet connection</string>
    <string name="E_Culture_tool_A" translatable="false">E Culture tool A</string>
    <string name="Name" translatable="true">Name</string>
    <string name="Surname" translatable="true">Surname</string>
    <string name="Date_of_birthday" translatable="true">Date of birthday</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Password" translatable="false">Password</string>
    <string name="Registration" translatable="false">Registration</string>
    <string name="title_activity_first" translatable="false">FirstActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_registrazione_locale" translatable="false">RegistrazioneLocaleActivity</string>
    <string name="title_activity_login_locale" translatable="false">LoginLocaleActivity</string>
    <string name="title_activity_home" translatable="false">activityHome</string>
    <string name="Benvenuto">Benvenuto</string>
    <string name="Luoghi_in_tendenza">Luoghi in tendenza</string>
    <string name="title_activity_home_page" translatable="false">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Impostazioni</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="menu_login">Login</string>
    <string name="Language">Lingua</string>
    <string name="General">Generale</string>
    <string name="menu_qr">Qr code</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="menu_logout">Logout</string>
    <string name="forgot_password">Password dimenticata</string>
    <string name="title_passDim">Recupera Password</string>
    <string name="RecuperoPass">Recupero Password</string>
    <string name="DescRecuperoPassword">Inserisci l\'email per recuperare la tua password</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="Nome">Nome</string>
    <string name="password">Password</string>
    <string name="Cognome">Cognome</string>
    <string name="Telefono">Telefono</string>
    <string name="Tipologia">Tipologia</string>
    <string name="Registrati">Registrati</string>
    <string name="visitatore">Visitatore</string>
    <string name="curatore">Curatore</string>
    <string name="guida">Guida</string>
    <string name="bt_yes_alert_dialog">Si</string>
    <string name="bt_no_alert_dialog">No</string>
    <string name="alert_dialog_phrase">Stai per effettuare il logout. Sei sicuro di voler continuare?</string>
    <string name="alert_dialog_answer">Sei Sicuro?</string>
    <string name="alert_dialog_new_route">Crea Nuovo Percorso</string>
    <string name="bt_do_alert_dialog">Fatto</string>
    <string name="None_areas_in_the_list">Nessuna Zona nella Lista</string>
    <string name="alert_dialog_new_area">Crea Nuova Area</string>
    <string name="None_items_in_the_list">Nessun oggetto presente in</string>
    <string name="alert_dialog_new_item">Aggiungi Nuovo Oggetto</string>
    <string name="Title">Titolo</string>
    <string name="Description">Descrizione</string>
    <string name="Tipology">Tipologia</string>
    <string name="Name_Area">Nome</string>
    <string name="Name_Item">Nome Oggetto</string>
    <string name="Site_name">Nome Sito</string>
    <string name="city">Città</string>
    <string name="opening_time">Orario Apertura</string>
    <string name="closing_time">Orario Chiusura</string>
    <string name="undo">Annulla</string>
    <string name="alert_dialog_edit_area">Modifica Area</string>
    <string name="alert_dialog_edit_item">Modifica Item</string>
    <string name="alert_dialog_share_qr_code">Condividi QR Code Opera</string>
    <string name="textview_share_qr_code">Per condividere, scansiona il codice QR qui sopra.</string>
    <string name="Area">Zona</string>
    <string name="Areas">Zone</string>
    <string name="Item">Items</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Galleria</string>
    <string name="created_on">Creata il</string>
    <string name="Route_Title">Percorsi</string>
    <string name="Aggiornato">Aggiornato</string>
    <string name="Area_Title">Zone</string>
    <string name="Item_Title">Oggetti</string>
    <string name="alert_dialog_add_area">Aggiungi al Percorso</string>
    <string name="do_login">"Login non effettuato "</string>
    <string name="bt_find">Cerca</string>
    <string name="bt_filters">Filtra</string>
    <string name="bt_share_route">Condividi percorsi</string>
    <string name="bt_show_route">Mostra Percorso</string>
    <string name="bt_add_new_route">Aggiungi Percorso</string>
    <string name="find_dot">Cerca...</string>
    <string name="branches">Diramazioni</string>
    <string name="Conferma_Modifica">Modifica confermata</string>
    <string name="Errore_fb">Errore di connessione con il server, controlla se è attivo o no la connessione</string>
    <string name="campi">Tutti i campi richiesti</string>
    <string name="Entrata">Benvenuto Utente</string>
    <string name="auth_falli">Autenticazione fallita</string>
    <string name="password_non_coincide">La password non coincide</string>
    <string name="password_corta">Nella password manca un numero o un carattere speciale o è troppo corta</string>
    <string name="nome_non_valido">Nome/Cognome non valido</string>
    <string name="telefono_non_valido">Numero di telefono non valido</string>
    <string name="logout_eseguito">Logout Eseguito</string>
    <string name="Scansione">Associa una Guida al Museo</string>
    <string name="inquadra">Inquadra il codice</string>
    <string name="fallito">Errore, qualcosa non è andato a buon fine e non è stato possibile concludere l\'operazione</string>
    <string name="update">Aggiornamento effettuato</string>
    <string name="aggiunto_fb">Aggiunto</string>
    <string name="Concesso">Permesso già concesso</string>
    <string name="Concesso_camera">Permesso camera concesso</string>
    <string name="Concesso_camera_non">Permesso camera non  concesso</string>
    <string name="Concesso_galleria">Permesso galleria concesso</string>
    <string name="Concesso_galleria_non">Permesso galleria non  concesso</string>
    <string name="Percorso_file">Non è stato trovato il file del percorso</string>
    <string name="foto_no">Non ci sono foto</string>
    <string name="download_file">Il file è stato scaricato sul cellulare</string>
    <string name="End">FINE</string>
    <string name="start">Start</string>
    <string name="bt_tutorial">Mostra Tutorial</string>
    <string name="route_tutorial">In questa sezione potrai creare nuovi percorsi, aggiungendo le aree prese in considerazione e vedere per ogni percorso,
        le opere associate ad ogni zona inserita.
    </string>
    <string name="filters_tutorial">Porai filtrare le diverse categorie di risorse come Percorsi, Zone ed Oggetti.
    Per ciascuna di queste categorie potrai in seguito visualizzare informazioni aggiuntive come Tipologia, Descrizione ed elementi collegati
    </string>
    <string name="museo">Museo Diocesano di</string>
    <string name="info">Info</string>
    <string name="galleri">Galleria</string>
    <string name="desc_inf" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="filtri">Filtra</string>
    <string name="Chiudi">Chiudi</string>
    <string name="Cerca">Cerca in</string>
    <string name="img">Immagine</string>
    <string name="scatt">Scatta\n foto</string>
</resources>