<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.malfaang.e_culture_tool_a.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

<!--    <fragment      Fragment galleria contenente le foto del museo:futura implementazione        -->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="com.example.prvaloocale.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->



    <fragment
        android:id="@+id/nav_prova"
        android:name="com.malfaang.e_culture_tool_a.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_prova" />

    <activity
        android:id="@+id/nav_login"
        android:name="com.malfaang.e_culture_tool_a.login.LoginActivity"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_login" />


    <activity
        android:id="@+id/nav_qr"
        android:name="com.malfaang.e_culture_tool_a.qrCode.qrcodeActivity"
        android:label="@string/menu_qr"
        tools:layout="@layout/activity_login"/>

    <activity
        android:id="@+id/nav_logout"
        android:name="com.malfaang.e_culture_tool_a.login.logout"
        android:label="@string/menu_logout" />

</navigation>