<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center_horizontal"
    android:background="@drawable/alert_dialog_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/filtri"
            android:textSize="20dp"
            android:textColor="@color/color_Primary_500"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/close_show_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/Chiudi"
            android:textSize="20dp"
            android:textColor="@color/red_delete"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Cerca"
        android:textSize="18dp"
        android:textColor="@color/color_Primary_500" />

    <RadioGroup
        android:id="@+id/Tipologia_Ricerca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_percorso"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:text="@string/Route_Title"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/radio_zona"
            android:layout_width="249dp"
            android:layout_height="wrap_content"

            android:text="@string/Area_Title"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/radio_oggetto"
            android:layout_width="249dp"
            android:layout_height="wrap_content"

            android:text="@string/Item_Title"
            android:textAlignment="center" />

    </RadioGroup>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">


        <Button
            android:id="@+id/sd_button_do"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/bt_do_alert_dialog" />

    </LinearLayout>


</LinearLayout>