<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->

    <item
        android:id="@+id/find"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/bt_find"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/filters"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/bt_filters"
        app:showAsAction="always"/>


    <item
        android:id="@+id/add_new_route"
        android:icon="@drawable/ic_add_24"
        android:title="@string/bt_add_new_route"
        app:showAsAction="ifRoom"/>

    </menu>