<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:layout_alignParentBottom="true"
    android:gravity="center_horizontal"
    android:background="@drawable/vie_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/img"
        android:textSize="20dp"
        android:textColor="@color/color_Accent_500"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/IB_camera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_menu_camera"
            android:backgroundTint="@color/color_Primary_500"
            android:tooltipText="@string/Camera" />

        <ImageButton
            android:id="@+id/IB_gallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="110dp"
            android:tooltipText="@string/Gallery"
            android:backgroundTint="@color/color_Primary_500"
            android:background="@drawable/ic_baseline_insert_photo_24"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scatt"
            android:gravity="center"
            android:lines="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:text="@string/galleri" />
    </RelativeLayout>


</LinearLayout>