<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center_horizontal"
    android:background="@drawable/alert_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/alert_dialog_answer"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/alert_dialog_phrase"
        android:textColor="@color/black"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/ad_button_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#E1E3E5"
            android:text="@string/bt_yes_alert_dialog"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/ad_button_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/bt_no_alert_dialog" />

    </LinearLayout>
</LinearLayout>