<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


  <ImageView
      android:id="@+id/IMG"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:layout_margin="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/Titolo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="30dp"
      android:hint="@string/museo"
      android:textAlignment="textStart"
      android:textSize="30dp"
      android:textStyle="bold"
      android:textColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/IMG" />

  <EditText
      android:id="@+id/Tipologia"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="30dp"
      android:textStyle="bold"
      android:hint="@string/Tipologia"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Titolo" />

  <TextView
      android:id="@+id/Info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/info"
      android:layout_marginLeft="30dp"
      android:layout_marginTop="50dp"
      android:textAlignment="textStart"
      android:textSize="20dp"
      android:textStyle="bold"
      android:textColor="@color/black"
      app:layout_constraintTop_toBottomOf="@+id/Titolo"
      tools:layout_editor_absoluteX="16dp" />

  <EditText
      android:id="@+id/opera_desc"
      android:layout_margin="10dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/opera_desc_bg"
      android:paddingLeft="20dp"
      android:paddingRight="15dp"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:layout_marginTop="10dp"
      android:hint="@string/desc_inf"
      android:textSize="17dp"
      app:layout_constraintTop_toBottomOf="@+id/Info" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>